Fix header visibility and px-1 padding class

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -266,7 +266,7 @@ input:not(.relative .absolute + input) {
 }
 
 .px-1 {
-  padding-left: 1.25rem;
+  padding-left: 0.25rem;
   padding-right: 0.25rem;
 }
 
